# CheckImgLinearity

./: CMakeLists.txt  Documentation.html  LICENSE  README.md
cmake/: FindGraphicsMagick.cmake  FindIlmBase.cmake  FindOpenEXR.cmake  FindOpenImageIO.cmake  FindWindowsSDK.cmake
doc/: CMakeLists.txt  doxyfile.in  doxyfileUpdate.cmake.in
doc/html/: ColorSwatchMask_8cpp.html  ColorSwatchMask_8cpp.js  ColorSwatchMask_8cpp_source.html  ColorSwatchMask_8h.html  ColorSwatchMask_8h_source.html  ColorSwatchPatch_8cpp.html  ColorSwatchPatch_8cpp.js  ColorSwatchPatch_8cpp_source.html  ColorSwatchPatch_8h.html  ColorSwatchPatch_8h_source.html  ColorSwatch_8cpp.html  ColorSwatch_8cpp.js  ColorSwatch_8cpp_source.html  ColorSwatch_8h.html  ColorSwatch_8h_source.html  ImagePlugin_8cpp.html  ImagePlugin_8cpp.js  ImagePlugin_8cpp_source.html  ImagePlugin_8h.html  ImagePlugin_8h_source.html  MunsellColor_8cpp.html  MunsellColor_8cpp.js  MunsellColor_8cpp_source.html  MunsellColor_8h.html  MunsellColor_8h_source.html  PreBuildUtil_8h.html  PreBuildUtil_8h.js  PreBuildUtil_8h_source.html  README_8md.html  README_8md_source.html  SwatchMainWindow_8cpp.html  SwatchMainWindow_8cpp_source.html  SwatchMainWindow_8h.html  SwatchMainWindow_8h_source.html  annotated.html  annotated.js  classColorSwatch-members.html  classColorSwatch.html  classColorSwatch.js  classColorSwatchMask-members.html  (+313 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enums_2.js  enums_3.js  enums_a.js  enums_b.js  enumvalues_0.js  (+61 more)
rsc/: ColorSwatch.ini  ColorSwatch_cr2.ini  ColorSwatch_jpg.ini  mask.tif
src/: ColorSwatch.cpp  ColorSwatch.h  ColorSwatchMask.cpp  ColorSwatchMask.h  ColorSwatchPatch.cpp  ColorSwatchPatch.h  ImagePlugin.cpp  ImagePlugin.h  MunsellColor.cpp  MunsellColor.h  PreBuildUtil.h  SwatchMainWindow.cpp  SwatchMainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
utils/: git-largest-objects.sh
